--- a/ui.frontend/src/main/webpack/site/main.scss
+++ b/ui.frontend/src/main/webpack/site/main.scss
@@ -34,3 +34,20 @@
 @import '../components/form/sign-in-buttons/scss/sign-in-buttons.scss';
 @import '../components/form/text/scss/text.scss';
 @import '../components/form/button/scss/button.scss';
+
+.image img.cmp-image__image {
+  max-height: 500px;
+  height: auto;
+  width: auto; // line causing Cumulative Layout Shift issue
+  //width: 100%; // line containing fix for Cumulative Layout Shift issue
+}
+
+@media(max-width: 767px) {
+  .image img.cmp-image__image {
+    max-height: 164.5px;
+  }
+}
+
+div[data-cmp-is=image] {
+  overflow: hidden
+}
