--- a/ui.apps/src/main/content/jcr_root/apps/wknd/components/contactus/contactus.html
+++ b/ui.apps/src/main/content/jcr_root/apps/wknd/components/contactus/contactus.html
@@ -13,6 +13,46 @@
     See the License for the specific language governing permissions and
     limitations under the License.
 */-->
+
+<style>
+#wknd-contact-us-form-username, #wknd-contact-us-form-message {
+    border: 1px solid black;
+    border-radius: 4px;
+    box-sizing: border-box;
+    font-size: var(--fontSizeSmall, 15px);
+    font-weight: var(--fontWeightSemiBold, 400);
+    height: 3pc;
+    padding: 20px;
+    width: 100%;
+    margin-top: 20px;
+    resize: none;
+    font-family: var(--fontFamilySansSerif, "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif);
+}
+
+#wknd-contact-us-form-message {
+    height: 100px;
+}
+
+#wknd-contact-us-form-submit {
+    background: #ffea00 0 0 no-repeat padding-box;
+    border: 0;
+    box-sizing: border-box;
+    color: #202020;
+    font-family: var(--fontFamilySansSerif, "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif);
+    font-size: 18px;
+    font-weight: var(--fontWeightBold, 600);
+    min-width: 180px;
+    padding: 0.75rem 1rem;
+    text-align: center;
+    text-transform: uppercase;
+    float: right;
+}
+
+#wknd-contact-us-form-submit:hover {
+    cursor: pointer;
+}
+</style>
+
 <div class="cmp-contactus" data-cmp-is="contactus" data-sly-test="${model.message != ''}">
     <div class="cmp-contactus__item" data-sly-use.model="com.adobe.aem.guides.wknd.core.models.ContactUsModel" data-sly-test="${model.message}">
         <p class="cmp-contactus__item-output"data-cmp-hook-contactus="model">${model.message @context="unsafe"}</p>
@@ -32,7 +72,28 @@
             <textarea cols="40" id="wknd-contact-us-form-message" rows="5" name="message" placeholder="Your message"></textarea>
         </div>
         <div>
-            <input id="wknd-contact-us-form-submit" type="submit" value="Send"/>
+            <input id="wknd-contact-us-form-submit" type="submit" value="Send" onclick="submitContactUsForm()"/>
         </div>
     </div>
 </div>
+
+<script>
+    function submitContactUsForm() {
+        const username = document.getElementById("wknd-contact-us-form-username").value;
+        const time = Date.now();
+        const myRequest = new Request("/us/en/about-us.html?username=" + username + "&time=" + time);
+
+        fetch(myRequest)
+            .then((response) => {
+                if (!response.ok) {
+                    console.log(response);
+                    document.getElementById("cmp-contactus-error").innerHTML = "Error: " + response.status;
+                } else {
+                    console.log(response.status);
+                    window.location.href = "/us/en/about-us.html?username=" + username + "&time=" + time;
+                }
+
+                return response.blob();
+            });
+    }
+</script>
